[gd_scene format=3 uid="uid://cef53y8gydq1i"]

[ext_resource type="Script" uid="uid://dmqxd0ij8b74v" path="res://src/scripts/view/ui/StartMenu.gd" id="1_66rjv"]

[node name="StartMenu" type="Control" unique_id=266623279]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_66rjv")

[node name="ColorRect" type="ColorRect" parent="." unique_id=1693274598]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.058824, 0.070588, 0.090196, 1)

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=2001151555]
layout_mode = 0
anchor_left = 0.25
anchor_top = 0.2
anchor_right = 0.75
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="MarginContainer" unique_id=1242806832]
custom_minimum_size = Vector2(0, 240)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel" unique_id=375415920]
layout_mode = 0
offset_left = 130.0
offset_top = 104.399994
offset_right = 457.0
offset_bottom = 312.4
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 16
alignment = 1

[node name="TitleLabel" type="Label" parent="MarginContainer/Panel/VBoxContainer" unique_id=1691194302]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 0.16078432, 0.18039216, 1)
theme_override_font_sizes/font_size = 25
text = "KC Masked Mania Madness"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="MarginContainer/Panel/VBoxContainer" unique_id=2137788481]
layout_mode = 2
size_flags_horizontal = 4
text = "Start Game"

[node name="OptionsButton" type="Button" parent="MarginContainer/Panel/VBoxContainer" unique_id=1508780367]
layout_mode = 2
size_flags_horizontal = 4
text = "Options"

[node name="QuitButton" type="Button" parent="MarginContainer/Panel/VBoxContainer" unique_id=198912561]
layout_mode = 2
size_flags_horizontal = 4
text = "Quit"

[node name="OptionsDialog" type="AcceptDialog" parent="." unique_id=1250074642]
ok_button_text = "Close"
